# sat-finder-pro-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.txt  README.md  SECURITY.md  app.py  checksums.md5  click.b64  docker-compose.yml  index.html  manifest.json  nginx.conf  ping.b64  pyproject.toml  radar.b64  release_notes.md  requirements.txt  satellites_full_database.js  satellites_part1.js  service-worker.js  settings.html  sw.js
.devcontainer/: Dockerfile  devcontainer.json
.envs/.local/: .env.example
.envs/.production/: .env.example
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  performance_issue.md  question.md  security_report.md
.github/profile/: README.md
.github/workflows/: build-apk.yml  ci-cd.yml  codeql-advanced.yml  codeql-analysis.yml  dependency-review.yml  deploy.yml  stale.yml  upload-release.yml
.husky/: commit-msg  pre-commit  pre-push
.well-known/: security.txt
ansible/playbooks/: deploy.yml
app/src/main/assets/www/: index.html
app/src/main/assets/www/css/: themes.css
app/src/main/assets/www/js/: app.js  gps.js  soundManager.js
assets/screenshots/: README.md
changelog/: CHANGELOG.md
config/docker/: docker-compose.override.yml
config/env/: .env.development  .env.production  .env.testing
css/: style.css
data/chipsets/: chipset_specific_repairs.json  complete_chipsets_database.json
data/frequencies/: updated_frequencies_2026.json
data/receivers/brands/: complete_brands_database.json
data/repairs/all_categories/: complete_repairs_database.json
data/tools/programming/: complete_tools_database.json
database/: advanced_repairs.sql  latest_repairs.sql  professional_programming_db.sql  schema.sql
docker/development/: Dockerfile
docker/production/: Dockerfile
docs/: README.md
docs/developer/: api-reference.md
docs/programming/: receiver_programming_guide.md
docs/repairs/: receiver_repairs_detailed.md
docs/user-guide/: user-manual.md
examples/javascript/: api_example.js
examples/shell/: api_example.sh
governance/: README.md
kubernetes/: deployment.yaml
locales/ar/: messages.json
locales/en/: messages.json
monitoring/grafana/dashboards/: satfinder-dashboard.json
monitoring/prometheus/: prometheus.yml
roadmap/: README.md
sat-finder-pro-ai/: index.html
sat-finder-pro-ai/css/: style.css
sat-finder-pro-ai/js/: app.js
satfinder/: package-lock.json  package.json
scripts/backup/: backup.sh
scripts/deploy/: deploy.sh
scripts/monitor/: monitor.sh
security/advisories/: policy.md
server/: package.json  server.js
servers/apache/: apache.conf
servers/docker-compose/: docker-compose.servers.yml
servers/gunicorn/: gunicorn.conf.py
servers/k8s/: servers-deployment.yaml
servers/nginx/: nginx.conf
servers/nodejs/: server.js
servers/uwsgi/: uwsgi.ini
src/satfinder/: __init__.py  ai.py  database.py  repair.py  satellite.py
terraform/environments/prod/: main.tf  outputs.tf  variables.tf
tests/unit/: api.test.js  test_database.py  test_repair.py  test_satellite.py
tools/configs/: oscam_configs.conf
