[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-finder-pro-ai"
version = "4.1.0"
description = "التطبيق العربي الأول لخبراء الأقمار الصناعية"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "peaceara777-star", email = "peaceara777@example.com"}
]
keywords = ["satellite", "arabic", "ai", "gemini", "receiver", "repair"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Arabic",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "Flask>=3.0.0",
    "flask-cors>=4.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/peaceara777-star/sat-finder-pro-ai"
Documentation = "https://github.com/peaceara777-star/sat-finder-pro-ai/tree/main/docs"
Repository = "https://github.com/peaceara777-star/sat-finder-pro-ai.git"
Issues = "https://github.com/peaceara777-star/sat-finder-pro-ai/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
