[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-finder-pro-ai"
version = "4.1.0"
description = "التطبيق العربي الأول لخبراء الأقمار الصناعية"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "peaceara777-star", email = "peaceara777@example.com"}
]
keywords = ["satellite", "arabic", "ai", "gemini", "receiver", "repair"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Arabic",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "Flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-generativeai>=0.8.6",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[project.urls]
Homepage = "https://github.com/peaceara777-star/sat-finder-pro-ai"
Documentation = "https://github.com/peaceara777-star/sat-finder-pro-ai/tree/main/docs"
Repository = "https://github.com/peaceara777-star/sat-finder-pro-ai.git"
Issues = "https://github.com/peaceara777-star/sat-finder-pro-ai/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
